--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <nav>
           <ul class="nav-list">
             <li class="nav-item">
-              <a href="index.html" class="nav-link">Agencja</a>
+              <a href="index.html" class="nav-link mainsite">Agencja</a>
             </li>
             <li class="nav-item">
               <a href="portfolio.html" class="nav-link">Portfolio</a>
