--- a/portfolio.html
+++ b/portfolio.html
@@ -25,7 +25,9 @@
               <a href="index.html" class="nav-link">Agencja</a>
             </li>
             <li class="nav-item">
-              <a href="portfolio.html" class="nav-link">Portfolio</a>
+              <a href="portfolio.html" class="nav-link portfoliosite"
+                >Portfolio</a
+              >
             </li>
             <li class="nav-item"><a href="" class="nav-link">Kontakt</a></li>
           </ul>
