--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             <li>
               <div class="lorem-svgbox">
                 <svg class="icon-lorem">
-                  <use href="./images/iconsopt.svg#icon-astronaut"></use>
+                  <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
               </div>
               <h3 class="lorem-header">Lorem ipsum</h3>
@@ -159,28 +159,28 @@
                 <li class="socialmedia-item">
                   <a href="https://instagram.com"
                     ><svg class="social-link">
-                      <use href="./images/iconsopt.svg#icon-instagram"></use>
+                      <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="socialmedia-item">
                   <a href="https://twitter.com"
                     ><svg class="social-link">
-                      <use href="./images/iconsopt.svg#icon-twitter"></use>
+                      <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="socialmedia-item">
                   <a href="https://facebook.com"
                     ><svg class="social-link">
-                      <use href="./images/iconsopt.svg#icon-facebook"></use>
+                      <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="socialmedia-item">
                   <a href=""
                     ><svg class="social-link">
-                      <use href="./images/iconsopt.svg#icon-insocial"></use>
+                      <use href="./images/icons.svg#icon-insocial"></use>
                     </svg>
                   </a>
                 </li>
@@ -199,28 +199,28 @@
                 <li class="socialmedia-item">
                   <a href="https://instagram.com"
                     ><svg class="social-link">
-                      <use href="./images/iconsopt.svg#icon-instagram"></use>
+                      <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="socialmedia-item">
                   <a href="https://twitter.com"
                     ><svg class="social-link">
-                      <use href="./images/iconsopt.svg#icon-twitter"></use>
+                      <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="socialmedia-item">
                   <a href="https://facebook.com"
                     ><svg class="social-link">
-                      <use href="./images/iconsopt.svg#icon-facebook"></use>
+                      <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="socialmedia-item">
                   <a href=""
                     ><svg class="social-link">
-                      <use href="./images/iconsopt.svg#icon-insocial"></use>
+                      <use href="./images/icons.svg#icon-insocial"></use>
                     </svg>
                   </a>
                 </li>
@@ -239,28 +239,28 @@
                 <li class="socialmedia-item">
                   <a href="https://instagram.com"
                     ><svg class="social-link">
-                      <use href="./images/iconsopt.svg#icon-instagram"></use>
+                      <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="socialmedia-item">
                   <a href="https://twitter.com"
                     ><svg class="social-link">
-                      <use href="./images/iconsopt.svg#icon-twitter"></use>
+                      <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="socialmedia-item">
                   <a href="https://facebook.com"
                     ><svg class="social-link">
-                      <use href="./images/iconsopt.svg#icon-facebook"></use>
+                      <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="socialmedia-item">
                   <a href=""
                     ><svg class="social-link">
-                      <use href="./images/iconsopt.svg#icon-insocial"></use>
+                      <use href="./images/icons.svg#icon-insocial"></use>
                     </svg>
                   </a>
                 </li>
@@ -279,28 +279,28 @@
                 <li class="socialmedia-item">
                   <a href="https://instagram.com"
                     ><svg class="social-link">
-                      <use href="./images/iconsopt.svg#icon-instagram"></use>
+                      <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="socialmedia-item">
                   <a href="https://twitter.com"
                     ><svg class="social-link">
-                      <use href="./images/iconsopt.svg#icon-twitter"></use>
+                      <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="socialmedia-item">
                   <a href="https://facebook.com"
                     ><svg class="social-link">
-                      <use href="./images/iconsopt.svg#icon-facebook"></use>
+                      <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="socialmedia-item">
                   <a href=""
                     ><svg class="social-link">
-                      <use href="./images/iconsopt.svg#icon-insocial"></use>
+                      <use href="./images/icons.svg#icon-insocial"></use>
                     </svg>
                   </a>
                 </li>
@@ -315,32 +315,32 @@
           <div class="ourteam-box">
             <div class="ourclient-card">
               <svg class="company-logo">
-                <use href="./images/iconsopt.svg#icon-logo1"></use>
+                <use href="./images/icons.svg#icon-logo1"></use>
               </svg>
             </div>
             <div class="ourclient-card">
               <svg class="company-logo">
-                <use href="./images/iconsopt.svg#icon-logo2"></use>
+                <use href="./images/icons.svg#icon-logo2"></use>
               </svg>
             </div>
             <div class="ourclient-card">
               <svg class="company-logo">
-                <use href="./images/iconsopt.svg#icon-logo3"></use>
+                <use href="./images/icons.svg#icon-logo3"></use>
               </svg>
             </div>
             <div class="ourclient-card">
               <svg class="company-logo">
-                <use href="./images/iconsopt.svg#icon-logo4"></use>
+                <use href="./images/icons.svg#icon-logo4"></use>
               </svg>
             </div>
             <div class="ourclient-card">
               <svg class="company-logo">
-                <use href="./images/iconsopt.svg#icon-logo5"></use>
+                <use href="./images/icons.svg#icon-logo5"></use>
               </svg>
             </div>
             <div class="ourclient-card">
               <svg class="company-logo">
-                <use href="./images/iconsopt.svg#icon-logo6"></use>
+                <use href="./images/icons.svg#icon-logo6"></use>
               </svg>
             </div>
           </div>
@@ -365,28 +365,28 @@
             <li class="socialmedia-item">
               <a href="https://instagram.com"
                 ><svg class="social-link">
-                  <use href="./images/iconsopt.svg#icon-instagram"></use>
+                  <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="socialmedia-item">
               <a href="https://twitter.com"
                 ><svg class="social-link">
-                  <use href="./images/iconsopt.svg#icon-twitter"></use>
+                  <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="socialmedia-item">
               <a href="https://facebook.com"
                 ><svg class="social-link">
-                  <use href="./images/iconsopt.svg#icon-facebook"></use>
+                  <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="socialmedia-item">
               <a href=""
                 ><svg class="social-link">
-                  <use href="./images/iconsopt.svg#icon-insocial"></use>
+                  <use href="./images/icons.svg#icon-insocial"></use>
                 </svg>
               </a>
             </li>
