--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
           <a href="tel:+48111111111" class="contact-link"
             ><svg class="icon-contact icon-mobile">
-              <use href="./images/icons.svg#icon-mobile"></use>
+              <use href="./images/ikony.svg#icon-mobile"></use>
             </svg>
             +48 111 111 111</a
           >
