--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
         <div class="contact-nav">
           <a href="mailto:info@devstudio.com" class="contact-link">
             <svg class="icon-contact icon-envelop">
-              <use href="./images/ikony.svg#icon-envelop"></use>
+              <use href="./images/icons.svg#icon-envelop"></use>
             </svg>
             info@devstudio.com</a
           >
 
           <a href="tel:+48111111111" class="contact-link"
             ><svg class="icon-contact icon-mobile">
-              <use href="./images/ikony.svg#icon-mobile"></use>
+              <use href="./images/icons.svg#icon-mobile"></use>
             </svg>
             +48 111 111 111</a
           >
