update section ourwork

--- a/index.html
+++ b/index.html
@@ -121,24 +121,33 @@
         <div class="container">
           <h2 class="section-header">Czym się zajmujemy</h2>
           <div class="workimg-box">
-            <img
-              src="images/imagesone.jpg"
-              alt="ourwork"
-              width="370"
-              height="294"
-            />
-            <img
-              src="images/imagestwo.jpg"
-              alt="ourwork"
-              width="370"
-              height="294"
-            />
-            <img
-              src="images/imagesthree.jpg"
-              alt="ourwork"
-              width="370"
-              height="294"
-            />
+            <div class="workimg-card">
+              <h3 class="workimg-describe">Aplikacje internetowe</h3>
+              <img
+                src="images/imagesone.jpg"
+                alt="ourwork"
+                width="370"
+                height="294"
+              />
+            </div>
+            <div class="workimg-card">
+              <h3 class="workimg-describe">Aplikacje internetowe</h3>
+              <img
+                src="images/imagestwo.jpg"
+                alt="ourwork"
+                width="370"
+                height="294"
+              />
+            </div>
+            <div class="workimg-card">
+              <h3 class="workimg-describe">Rozwiązania graficzne</h3>
+              <img
+                src="images/imagesthree.jpg"
+                alt="ourwork"
+                width="370"
+                height="294"
+              />
+            </div>
           </div>
         </div>
       </section>
