update cards in portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -73,46 +73,104 @@
 
           <div class="project-container">
             <div class="project-card">
-              <img src="images/technocrack.jpg" alt="technocrack" /><br />
+              <p class="portfolio-describe">
+                Technocrack jest popularną platformą wykorzystywaną do
+                rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę
+                do celów szpiegowskich i ataków na niezabezpieczone serwery
+                konkurencji
+              </p>
+              <img
+                src="images/technocrack.jpg"
+                alt="technocrack"
+                class="portfolio-images"
+              /><br />
               <h3 class="project-header">Technocrack</h3>
               <h3 class="project-type">Strona internetowa</h3>
             </div>
             <div class="project-card">
+              <p class="portfolio-describe">
+                Technocrack jest popularną platformą wykorzystywaną do
+                rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę
+                do celów szpiegowskich i ataków na niezabezpieczone serwery
+                konkurencji
+              </p>
               <img src="images/goldenstar.jpg" alt="goldenstar" /><br />
               <h3 class="project-header">Grafika New Orlean vs Golden Star</h3>
               <h3 class="project-type">Dizajn</h3>
             </div>
             <div class="project-card">
+              <p class="portfolio-describe">
+                Technocrack jest popularną platformą wykorzystywaną do
+                rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę
+                do celów szpiegowskich i ataków na niezabezpieczone serwery
+                konkurencji
+              </p>
               <img src="images/seafood.jpg" alt="seafood" /><br />
               <h3 class="project-header">Restauracja Seafood</h3>
               <h3 class="project-type">Aplikacja</h3>
             </div>
             <div class="project-card">
+              <p class="portfolio-describe">
+                Technocrack jest popularną platformą wykorzystywaną do
+                rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę
+                do celów szpiegowskich i ataków na niezabezpieczone serwery
+                konkurencji
+              </p>
               <img src="images/projektpri.jpg" alt="projectprime" /><br />
               <h3 class="project-header">Projekt Prime</h3>
               <h3 class="project-type">Marketing</h3>
             </div>
             <div class="project-card">
+              <p class="portfolio-describe">
+                Technocrack jest popularną platformą wykorzystywaną do
+                rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę
+                do celów szpiegowskich i ataków na niezabezpieczone serwery
+                konkurencji
+              </p>
               <img src="images/projectbox.jpg" alt="projectboxes" /><br />
               <h3 class="project-header">Grafika New Orlean vs Golden Star</h3>
               <h3 class="project-type">Dizajn</h3>
             </div>
             <div class="project-card">
+              <p class="portfolio-describe">
+                Technocrack jest popularną platformą wykorzystywaną do
+                rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę
+                do celów szpiegowskich i ataków na niezabezpieczone serwery
+                konkurencji
+              </p>
               <img src="images/inspiration.jpg" alt="inspiration" /><br />
               <h3 class="project-header">Inspiration has no Borders</h3>
               <h3 class="project-type">Strona internetowa</h3>
             </div>
             <div class="project-card">
+              <p class="portfolio-describe">
+                Technocrack jest popularną platformą wykorzystywaną do
+                rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę
+                do celów szpiegowskich i ataków na niezabezpieczone serwery
+                konkurencji
+              </p>
               <img src="images/magazyn.jpg" alt="magazyn" /><br />
               <h3 class="project-header">Technocrack</h3>
               <h3 class="project-type">Strona internetowa</h3>
             </div>
             <div class="project-card">
+              <p class="portfolio-describe">
+                Technocrack jest popularną platformą wykorzystywaną do
+                rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę
+                do celów szpiegowskich i ataków na niezabezpieczone serwery
+                konkurencji
+              </p>
               <img src="images/projektla.jpg" alt="projectlab" /><br />
               <h3 class="project-header">Projekt LAB</h3>
               <h3 class="project-type">Marketing</h3>
             </div>
             <div class="project-card">
+              <p class="portfolio-describe">
+                Technocrack jest popularną platformą wykorzystywaną do
+                rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę
+                do celów szpiegowskich i ataków na niezabezpieczone serwery
+                konkurencji
+              </p>
               <img src="images/growing.jpg" alt="growingbuisness" /><br />
               <h3 class="project-header">Growing Business</h3>
               <h3 class="project-type">Aplikacja</h3>
