--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
               />
             </div>
             <div class="workimg-card">
-              <h3 class="workimg-describe">Aplikacje internetowe</h3>
+              <h3 class="workimg-describe">Aplikacje mobilne</h3>
               <img
                 src="images/imagestwo.jpg"
                 alt="ourwork"
@@ -407,7 +407,9 @@
     </footer>
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
-        <button type="button" class="close-btn" data-modal-close></button>
+        <button type="button" class="close-btn" data-modal-close><svg class="x-btn">
+          <use href="./images/icons.svg#icon-close"></use>
+        </svg></button>
       </div></div>
 
     </div>
