--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
     </footer>
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
-        <button type="button" data-modal-close><svg class="close-btn">
+        <button type="button" data-modal-close class="close-btn"><svg class="x-btn">
           <use href="./images/icons.svg#icon-close"></use>
         </svg></button>
       </div></div>
