--- a/index.html
+++ b/index.html
@@ -407,8 +407,9 @@
     </footer>
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
-        <button type="button" data-modal-close class="close-btn"><svg class="x-btn">
-          <use href="./images/icons.svg#icon-close"></use>
+        <button type="button" data-modal-close class="close-btn">
+		<svg class="x-btn">
+          <use href="#icon-close"></use>
         </svg></button>
       </div></div>
 
