--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
       <div class="modal">
         <button type="button" data-modal-close class="close-btn">
 		<svg class="x-btn">
-          <use href="#icon-close"></use>
+          <use href="./images/icons.svg#icon-close"></use>
         </svg></button>
       </div></div>
 
